--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,12 @@
-# content of: tox.ini , put in same dir as setup.py
+# Tox (http://tox.testrun.org/) is a tool for running tests
+# in multiple virtualenvs. This configuration file will run the
+# test suite on all supported python versions. To use it, "pip install tox"
+# and then run "tox" from this directory.
+
 [tox]
-#envlist = py32,py33
 envlist = py33
+
 [testenv]
-deps=pytest       # install pytest in the venvs
-commands=py.test  # or 'nosetests' or ...
+commands = {envpython} setup.py test
+deps =
+
