--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,12 @@
 envlist = py33
 
 [testenv]
-commands = {envpython} setup.py test
-deps =
+#commands = {envpython} setup.py test
+#deps =
+deps=pytest       # install pytest in the venvs
+commands=py.test {posargs:astroplpython tests} # or 'nosetests' or ...
 
+[testenv:py33]
+basepython = python3.3
+deps = scipy>=0.15.1
+       pytest>=2.6.0
