add nosetests configuration

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,18 @@
-    [metadata]
-    description-file = README.md
+[metadata]
+description-file = README.md
+
+[nosetests]
+# locating tests
+#where=./tests/astroplpython/proc/ 
+#include=^test_*
+# coverage
+with-coverage=1
+cover-branches=1
+cover-package=astroplpython
+#cover-html=1
+#cover-html-dir=htmlcov
+#with-xcoverage=1
+#xcoverage-file=coverage.xml
+#with-xunit=1
+#xunit-file=nose_xunit.xml
+cover-erase=1
