--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ description-file = README.md
 
 [nosetests]
 # locating tests
-#where=./tests/astroplpython/proc/ 
-#include=^test_*
+#where=./tests
+include=^test_*.py
 # coverage
 with-coverage=1
 cover-branches=1
