enforce all-modules for nosetests

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ include=^test_*.py
 with-coverage=1
 cover-branches=1
 cover-package=astroplpython
+all-modules=1
 #cover-html=1
 #cover-html-dir=htmlcov
 #with-xcoverage=1
